--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 
       <div class="bookmarks">
         <div class="square">
-        <div class="square-header">fun</div>
+        <div class="square-header">home</div>
         <a href="https://wavy.fm" target="_blank">wavy.fm</a>
         <a href="https://twitch.tv" target="_blank">twitch</a>
         <a href="https://old.reddit.com" target="_blank">reddit</a>
         <a href="https://discord.com" target="_blank">discord</a>
-        <!---<a href="https://spoti.fi" target="_blank">spotify</a>--->
         
         </div>
         
@@ -27,17 +26,17 @@
         <a href="https://sis-tuni.funidata.fi" target="_blank">sisu</a>
         <a href="https://moodle.tuni.fi" target="_blank">moodle</a>
         <a href="https://matlab.mathworks.com" target="_blank">matlab</a>
-        <a href="https://outlook.office.com" target="_blank">outlook</a>         
+        <a href="https://outlook.office.com" target="_blank">office</a>
+        <a href="https://overleaf.com" target="_blank">overleaf</a>
         </div>
 
         <div class="square">
-        <div class="square-header">prg</div>
+        <div class="square-header">etc</div>
         <a href="https://github.com" target="_blank">github</a>
         <a href="https://aws.amazon.com" target="_blank">aws</a>
-        <a href="https://remote.santerj.fi:9090" target="_blank">remote</a>
-        <a href="https://dash.cloudflare.com/" target ="_blank">cloudflare</a>
-        <!---<a href="https://noip.com" target="_blank">noip</a>--->
-        <!---<a href="https://domainhotelli.fi" target="_blank">domainhotelli</a>--->
+        <a href="https://trello.com" target="_blank">trello</a>
+        <a href="https://outlook.live.com" target="_blank">live</a>
+        <a href="https://console.hetzner.cloud" target="_blank">hetzner</a>
         </div>
       </div>
     </div>
